// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props.loading is false, state.requested is true 1`] = `
<div
  className="flex-none layout-row upload_btn_wrapper "
  data-for="RANDOM_KEY"
  data-tip="FOO_TOOLTIP"
>
  <RoundButton
    active={true}
    handleNext={[Function]}
    size="small"
    text="Download"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
</div>
`;

exports[`props.loading is true, state.requested is true 1`] = `
<div
  className="flex-none layout-row upload_btn_wrapper "
  data-for="RANDOM_KEY"
  data-tip="FOO_TOOLTIP"
>
  <div
    className="flex-100 layout-column layout-align-space-around-center"
  >
    <p
      className="flex-none"
    >
      Your document is being generated.
    </p>
    <p
      className="flex-none"
    >
      Please wait....
    </p>
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="flex-none layout-row upload_btn_wrapper "
  data-for="RANDOM_KEY"
  data-tip="FOO_TOOLTIP"
>
  <RoundButton
    active={true}
    handleNext={[Function]}
    size="small"
    text="Request"
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
</div>
`;
